# Cardinal

./: .gitignore  CMakeLists.txt  boot.asm  run.bat
include/: Version.template  debug.h
include/boot/: multiboot.h
include/core/: boot.h  module.h
include/core/io/: idt.h  isr.h  ports.h
include/core/memory/: alloc.h  bitmap.h  frame.h  locations.h  memory.h  paging.h
include/drivers/: driver.h  keyboard.h  screen.h  serial.h  timer.h
include/std/: arg.h  convert.h  core.h  io.h  memory.h  stdint.h  string.h  types.h
iso/boot/grub/: grub.cfg
src/: kmain.c  kmain.cpp
src/boot/: boot.asm  interrupts.asm  long_mode.asm  multiboot.asm
src/core/: boot.cpp
src/core/io/: idt.c  idt.cpp  isr.c  isr.cpp  ports.c  ports.cpp
src/core/memory/: alloc.cpp  bitmap.cpp  frame.cpp  memory.c  memory.cpp  paging.cpp  stackguard.cpp
src/drivers/: keyboard.c  keyboard.cpp  screen.c  screen.cpp  serial.cpp  timer.c  timer.cpp
src/linker/: linker.ld
src/std/: convert.c  convert.cpp  io.c  io.cpp  memory.cpp  stackguard.cpp  string.c  string.cpp
